--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -11,6 +11,12 @@
         "terraformer-arcgis-parser":"0.1.8",
         "geohub":"0.1.1"
     },
+    "devDependencies": {
+        "mocha": "*",
+        "should": "*",
+        "zombie": "1.3.1",
+        "superagent": "git://github.com/hunterloftis/superagent.git"
+    },
     "scripts": {
         "start": "node app.js",
         "debug": "node debug app.js"
