--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -12,6 +12,9 @@
         "geohub":"0.1.1"
     },
     "devDependencies": {
+        "grunt": "0.4.x",
+        "grunt-mocha-test": "*",
+        "grunt-contrib-jshint": "0.3.x",
         "mocha": "*",
         "should": "*",
         "zombie": "1.3.1",
