--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -1,8 +1,8 @@
 {
     "name": "koop",
     "private": true,
-    "version": "0.0.0",
-    "description": "a Sails application",
+    "version": "0.1.0",
+    "description": "an api for converting geojson data into Esri feature services",
     "dependencies": {
         "sails": "0.8.94",
         "optimist": "0.4.0",
@@ -17,8 +17,7 @@
         "grunt-contrib-jshint": "0.3.x",
         "mocha": "*",
         "should": "*",
-        "zombie": "1.3.1",
-        "superagent": "git://github.com/hunterloftis/superagent.git"
+        "superagent": "*"
     },
     "scripts": {
         "start": "node app.js",
@@ -27,5 +26,5 @@
     "main": "app.js",
     "repository": "",
     "author": "",
-    "license": "MIT"
+    "license": "Apache"
 }
