--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "optimist": "0.4.0",
         "sails-mongo": "*",
         "request": "*",
-        "terraformer":"*",
+        "terraformer":"0.2.0",
         "terraformer-arcgis-parser":"0.1.8",
         "geohub":"0.1.1"
     },
