--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "sails": "0.9.3",
     "optimist": "0.4.0",
+    "ejs": "0.8.4",
     "sails-mongo": "*",
     "request": "*",
     "terraformer": "0.2.0",
