--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -14,7 +14,8 @@
     "geohub": "0.1.8",
     "underscore": "~1.5.1",
     "sql-parser": "~0.4.0",
-    "include-all": "~0.1.1"
+    "include-all": "~0.1.1",
+    "redis": "~0.8.4"
   },
   "devDependencies": {
     "grunt": "0.4.x",
