--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -9,7 +9,7 @@
     "ejs": "0.8.4",
     "sails-mongo": "*",
     "request": "*",
-    "terraformer": "0.2.0",
+    "terraformer": "https://api.github.com/repos/esri/Terraformer/tarball/master",
     "terraformer-arcgis-parser": "0.1.8",
     "geohub": "0.2.0",
     "underscore": "~1.5.1",
