--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -5,7 +5,7 @@
   "description": "an api for converting geojson data into Esri feature services",
   "dependencies": {
     "sails": "0.9.3",
-    "optimist": "0.4.0",
+    "optimist": "~0.4.0",
     "ejs": "0.8.4",
     "sails-mongo": "*",
     "request": "*",
