--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "optimist": "~0.4.0",
     "ejs": "0.8.4",
     "sails-mongo": "*",
-    "request": "*",
+    "request": "~2.27.0",
     "terraformer": "https://api.github.com/repos/esri/Terraformer/tarball/master",
     "terraformer-arcgis-parser": "0.1.8",
     "geohub": "0.2.0",
