--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -15,7 +15,8 @@
     "underscore": "~1.5.1",
     "sql-parser": "~0.4.0",
     "include-all": "~0.1.1",
-    "redis": "~0.8.4"
+    "redis": "~0.8.4",
+    "mongoskin": "~0.6.0"
   },
   "devDependencies": {
     "grunt": "0.4.x",
