--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -23,7 +23,8 @@
     "canvas": "~1.1.1",
     "sphericalmercator": "~1.0.2",
     "qs": "~0.6.5",
-    "nodetiles-core": "0.0.2"
+    "nodetiles-core": "0.0.2",
+    "topojson": "~1.4.3"
   },
   "devDependencies": {
     "grunt": "0.4.x",
