--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -20,8 +20,8 @@
     "node-fs": "~0.1.7",
     "sphericalmercator": "~1.0.2",
     "qs": "~0.6.5",
-    "nodetiles-core": "https://api.github.com/repos/chelm/nodetiles-core/tarball/master",
-    "topojson": "~1.4.3"
+    "topojson": "~1.4.3",
+    "node.extend": "~1.0.8"
   },
   "devDependencies": {
     "grunt": "0.4.x",
