added support for utf grid

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "qs": "~0.6.5",
     "topojson": "~1.4.3",
     "node.extend": "~1.0.8",
-    "nodetiles-core": "0.0.3"
+    "nodetiles-core": "0.0.3",
+    "nodemon": "~0.7.6"
   },
   "devDependencies": {
     "grunt": "0.4.x",
