--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -22,7 +22,8 @@
     "topojson": "~1.4.3",
     "node.extend": "~1.0.8",
     "nodetiles-core": "0.0.3",
-    "nodemon": "~0.7.6"
+    "nodemon": "~0.7.6",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "grunt": "0.4.x",
