fleshing out the agol data export to formats

--- a/config/local.js.example
+++ b/config/local.js.example
@@ -5,6 +5,8 @@
 
 module.exports = {
 
+  logfile: '/var/log/koop.log',
+
   data_dir: '/usr/local/koop/',
   
   github_token: 'XXXXXXXXXXXXXXXXXX',
