--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nodemon": "~0.7.6",
     "lodash": "~2.4.1",
     "spawn-async": "0.0.1",
-    "bunyan": "~0.22.1"
+    "bunyan": "~0.22.1",
+    "async": "~0.2.10"
   },
   "devDependencies": {
     "grunt": "0.4.x",
