--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "ejs": "0.8.4",
     "sails-mongo": "*",
     "request": "~2.27.0",
-    "terraformer": "https://api.github.com/repos/chelm/Terraformer/tarball/master",
-    "terraformer-arcgis-parser": "0.1.8",
+    "terraformer": "1.0.3",
+    "terraformer-arcgis-parser": "1.0.3",
     "geohub": "0.3.0",
     "underscore": "~1.5.1",
     "sql-parser": "~0.4.0",
