--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "description": "an api for converting geojson data into Esri feature services",
   "dependencies": {
+    "grunt": "0.4.x",
     "sails": "0.9.3",
     "optimist": "~0.4.0",
     "ejs": "0.8.4",
