--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -5,6 +5,7 @@
   "description": "an api for converting geojson data into Esri feature services",
   "dependencies": {
     "grunt": "0.4.x",
+    "zeparser": "0.0.7",
     "sails": "0.9.3",
     "optimist": "~0.4.0",
     "ejs": "0.8.4",
