--- a/config/development.yml
+++ b/config/development.yml
@@ -1,4 +1,7 @@
 # Config settings for NODE_ENV=development
+server:
+  port: 1337
+
 logfile: '/var/log/koop.log'
 data_dir: '/usr/local/koop/'
 github_token: '6c67e3477b6c08a2871d76b26db2b66a7b78f8a6'
