package updates for missing packages

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "bunyan": "~0.22.1",
     "terraformer-arcgis-parser": "1.0.3",
     "terraformer-wkt-parser": "~1.0.0",
+    "sphericalmercator": "~1.0.2",
+    "topojson": "~1.4.3",
+    "lodash": "~2.4.1",
     "peechee": "0.0.6",
     "config": "~0.4.35",
     "cors": "~2.2.0",
