updates to the readme

--- a/config/default.json.example
+++ b/config/default.json.example
@@ -4,14 +4,14 @@
         "port": 1337
     },
 
+    // the number of children to start - defaults to the number of CPUs 
+    processes: 1,
+
     //the local dir for storing tile files
     data_dir: '/usr/local/koop/',
 
     // if a logfile is defined all logs will go to it, otherwise console used for logging
     "logfile": "/var/log/koop.log",
-
-    // used to access github, should be moved into the github provider
-    "github_token": "XXXXXXXXXXXXXXXXXXXXXX",
 
     "db": {
         "postgis": {
