--- a/packages/koop-core/package.json
+++ b/packages/koop-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koop",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "A node module/express middleware for converting GeoJSON to Esri Feature Services.",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "aws-sdk": "~2.0.0",
     "body-parser": "~1.0.2",
     "config": "~1.8.1",
+    "connect-multiparty": "^1.2.5",
     "express": "~4.0.0",
     "kue": "~0.8.9",
     "lodash": "~2.4.1",
