--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "express": "~4.0.0",
     "kue": "~0.8.9",
     "lodash": "~2.4.1",
-    "mapnik": "1.4.17",
-    "mapnik-pool": "~0.0.0",
+    "mapnik": "~3.1.6",
+    "mapnik-pool": "~0.1.1",
     "mkdirp": "~0.5.0",
     "mv": "~2.0.0",
     "node-fs": "~0.1.7",
