--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: node_js
+
 node_js:
-  - "0.11"
-  - "0.10"
-  - "0.8"
-  - "0.6"
+  - '0.12'
+  - '0.10'
+sudo: false # Enable docker-based containers
+cache:
+  directories: # Cache dependencies
+    - node_modules
+
+script:
+  - npm test
