--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "terraformer-arcgis-parser": "1.0.4",
     "terraformer-wkt-parser": "~1.0.0",
     "topojson": "~1.6.18",
-    "winston": "~0.9.0"
+    "winston": "^1.0.0"
   },
   "repository": {
     "type": "git",
