--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "koop",
-  "version": "2.5.1",
   "description": "A node module/express middleware for converting GeoJSON to Esri Feature Services.",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha test/models/ -t 20000",
-    "lint": "gulp",
-    "release": "gh-release"
-  },
+  "version": "2.5.1",
   "author": {
     "name": "Chris Helm"
   },
-  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/Esri/koop/issues"
+  },
   "dependencies": {
     "async": "~0.9.0",
     "aws-sdk": "~2.1.20",
@@ -36,13 +32,6 @@
     "topojson": "~1.6.18",
     "winston": "^1.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/Esri/koop.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Esri/koop/issues"
-  },
   "devDependencies": {
     "gh-release": "^1.1.6",
     "gulp": "^3.8.11",
@@ -53,5 +42,27 @@
     "jshint-stylish": "^1.0.1",
     "mocha": "^2.2.1",
     "should": "~5.2.0"
+  },
+  "homepage": "https://github.com/Esri/koop",
+  "keywords": [
+    "etl",
+    "feature",
+    "featureService",
+    "geojson",
+    "geospatial",
+    "koop",
+    "service",
+    "spatial"
+  ],
+  "license": "Apache-2.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Esri/koop.git"
+  },
+  "scripts": {
+    "lint": "gulp",
+    "release": "gh-release",
+    "test": "mocha test/models/ -t 20000"
   }
 }
