--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "bugs": {
     "url": "https://github.com/koopjs/koop/issues"
   },
+  "contributors": [
+    "Daniel Fenton <dfenton@esri.com>",
+    "Nate Goldman <nate@ngoldman.me>"
+  ],
   "dependencies": {
     "async": "~0.9.0",
     "aws-sdk": "~2.1.20",
