--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "~1.12.3",
     "config": "~1.12.0",
     "connect-multiparty": "^1.2.5",
+    "ejs": "^2.3.3",
     "esri-extent": "^1.1.0",
     "esri-proj-codes": "^1.0.0",
     "express": "~4.12.3",
