--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "esri-extent": "^1.1.0",
     "esri-proj-codes": "^1.0.0",
     "express": "~4.12.3",
+    "format-spatial-ref": "^1.0.0",
     "kue": "~0.9.4",
     "lodash": "~3.6.0",
     "mkdirp": "~0.5.0",
