--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "mocha": "^2.2.1",
     "nock": "^2.12.0",
     "should": "~5.2.0",
-    "standard": "^5.2.2"
+    "sinon": "^1.17.1",
+    "standard": "^5.3.1"
   },
   "homepage": "https://github.com/koopjs/koop",
   "keywords": [
