--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "~4.12.3",
     "format-spatial-ref": "^1.0.0",
     "fs-extra": "^0.26.2",
+    "highland": "^2.5.1",
     "kue": "~0.9.4",
     "lodash": "~3.6.0",
     "mkdirp": "~0.5.0",
