--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "connect-multiparty": "^1.2.5",
     "ejs": "^2.3.3",
     "esri-extent": "^1.1.0",
-    "express": "~4.12.3",
+    "express": "^4.12.3",
     "format-spatial-ref": "^1.0.0",
     "fs-extra": "^0.26.2",
     "highland": "^2.5.1",
-    "kue": "~0.9.4",
     "lodash": "~3.6.0",
     "mkdirp": "~0.5.0",
     "mv": "~2.0.3",
@@ -36,10 +35,11 @@
     "sql-parser": "~0.5.0",
     "terraformer": "1.0.5",
     "terraformer-arcgis-parser": "1.0.4",
-    "terraformer-wkt-parser": "~1.0.0",
-    "winston": "^1.0.0"
+    "terraformer-wkt-parser": "~1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
     "gh-release": "^1.1.6",
     "mocha": "^2.2.1",
     "nock": "^2.12.0",
@@ -66,6 +66,7 @@
   },
   "scripts": {
     "release": "gh-release",
-    "test": "standard && mocha test/models/ -t 20000"
+		"compile": "babel src --out-dir .",
+    "test": "standard src && mocha test/models/ -t 20000"
   }
 }
