--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "format-spatial-ref": "^1.0.0",
     "fs-extra": "^0.26.2",
     "highland": "^2.5.1",
+    "koop-logger": "^1.0.1",
     "lodash": "~3.6.0",
     "mkdirp": "~0.5.0",
     "mv": "~2.0.3",
@@ -66,7 +67,7 @@
   },
   "scripts": {
     "release": "gh-release",
-		"compile": "babel src --out-dir .",
+    "compile": "babel src --out-dir .",
     "test": "standard src && mocha test/models/ -t 20000"
   }
 }
