--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koop",
   "description": "Transform, query, & download geospatial data on the web",
-  "version": "2.12.1",
+  "version": "3.0.0-alpha",
   "author": {
     "name": "Chris Helm"
   },
