--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.12.3",
     "format-spatial-ref": "^1.0.0",
     "fs-extra": "^0.26.2",
+    "gunzip-maybe": "^1.3.1",
     "highland": "^2.5.1",
     "koop-logger": "^1.0.1",
     "lodash": "~3.6.0",
