--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koop",
   "description": "Transform, query, & download geospatial data on the web",
-  "version": "3.0.0-alpha.5",
+  "version": "3.0.0-alpha.6",
   "author": {
     "name": "Chris Helm"
   },
@@ -69,7 +69,7 @@
   },
   "scripts": {
     "release": "gh-release",
-    "compile": "babel src --out-dir . && cp -r src/lib/templates/ lib",
+    "compile": "babel src --out-dir . && cp -r src/lib/templates/ lib/templates",
     "test": "standard src && mocha test/models/ -t 20000"
   }
 }
