--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "koop-logger": "^1.0.1",
     "lodash": "~3.6.0",
     "mkdirp": "~0.5.0",
+    "moment": "^2.11.2",
     "mv": "~2.0.3",
     "node-fs": "~0.1.7",
     "request": "~2.54.0",
