--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -1,6 +1,6 @@
 {
   "name": "winnow",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0",
   "description": "Apply sql-like filters to streams of GeoJSON",
   "main": "index.js",
   "directories": {
