--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koop",
   "description": "Transform, query, & download geospatial data on the web",
-  "version": "3.0.0-alpha.10",
+  "version": "3.0.0-alpha.11",
   "author": {
     "name": "Chris Helm"
   },
@@ -25,7 +25,7 @@
     "format-spatial-ref": "^1.0.0",
     "fs-extra": "^0.26.2",
     "gunzip-maybe": "^1.3.1",
-    "highland": "^2.5.1",
+    "highland": "^3.0.0-beta.1",
     "koop-logger": "^1.0.1",
     "lodash": "~3.6.0",
     "mkdirp": "~0.5.0",
