--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "kue": "~0.9.4",
     "lodash": "~3.6.0",
     "mkdirp": "~0.5.0",
+    "moment": "^2.12.0",
     "mv": "~2.0.3",
     "node-fs": "~0.1.7",
     "request": "~2.54.0",
