remove terraformer parser from deps (its been vendored)

--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -37,8 +37,7 @@
     "lodash": "^4.17.4",
     "ngeohash": "^0.6.0",
     "proj4": "^2.3.17",
-    "terraformer": "^1.0.7",
-    "terraformer-arcgis-parser": "^1.0.5"
+    "terraformer": "^1.0.7"
   },
   "devDependencies": {
     "buble": "^0.15.2",
