basic WFS support (#33)
* add basic WFS support

* work with srsName or srsname

* kick travis

* update package.json

--- a/packages/winnow/package.json
+++ b/packages/winnow/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FeatureServer/winnow.git"
+    "url": "git+https://github.com/koopjs/winnow.git"
   },
   "keywords": [
     "geojson",
@@ -26,9 +26,9 @@
   "author": "Daniel Fenton <dfenton@esri.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/FeatureServer/winnow/issues"
+    "url": "https://github.com/koopjs/winnow/issues"
   },
-  "homepage": "https://github.com/FeatureServer/winnow#readme",
+  "homepage": "https://github.com/koopjs/winnow#readme",
   "dependencies": {
     "@turf/bbox-polygon": "^4.1.0",
     "@turf/centroid": "^4.1.0",
